--- a/fishoilproduct.html
+++ b/fishoilproduct.html
@@ -55,7 +55,7 @@
 <!-- breadcrumb -->
 <div class="breadcrumb" aria-label="breadcrumb">
     <ol>
-        <li><a href="index2.0.html">首頁</a></li>
+        <li><a href="index.html">首頁</a></li>
         <li><a href="/product-list-all.html">所有商品</a></li>
         <li aria-current="page">vita C 頂級魚油膠囊 30粒/罐</li>
     </ol>
@@ -65,7 +65,7 @@
     <div class="productpage-first-section">
         <div class="productimg">
             <div class="large-img">
-                <img src="/picture/ fishoilproduct.jpg" alt="頂級魚油膠囊">
+                <img src="/picture/fishoilproduct.jpg" alt="頂級魚油膠囊">
             </div>
             <div class="small-img">
                 <img src="/picture/probioticsproduct.jpg" alt="頂級魚油膠囊各組合">
