--- a/lutienarticle.html
+++ b/lutienarticle.html
@@ -56,7 +56,7 @@
 <!-- breadcrumb -->
 <div class="breadcrumb" aria-label="breadcrumb">
     <ol>
-        <li><a href="index2.0.html">首頁</a></li>
+        <li><a href="index.html">首頁</a></li>
         <li><a href="/blog.html">健康知識</a></li>
         <li aria-current="page">葉黃素怎麼吃才有效？全方位解析葉黃素是什麼、功效與正確吃法</li>
     </ol>
