--- a/product-list-fishoil.html
+++ b/product-list-fishoil.html
@@ -54,7 +54,7 @@
 <!-- breadcrumb -->
 <div class="breadcrumb" aria-label="breadcrumb">
     <ol>
-        <li><a href="index2.0.html">首頁</a></li>
+        <li><a href="index.html">首頁</a></li>
         <li><a href="/product-list-all.html">所有商品</a></li>
         <li aria-current="page">vita C 頂級魚油膠囊推薦</li>
     </ol>
