--- a/vitaminbarticle.html
+++ b/vitaminbarticle.html
@@ -56,7 +56,7 @@
 <!-- breadcrumb -->
 <div class="breadcrumb" aria-label="breadcrumb">
     <ol>
-        <li><a href="index2.0.html">首頁</a></li>
+        <li><a href="index.html">首頁</a></li>
         <li><a href="/blog.html">健康知識</a></li>
         <li aria-current="page">吃B群功效全解析：告別疲勞、提升活力，B群是什麼？怎麼吃最有效？</li>
     </ol>
