--- a/Probiotics-airticle.html
+++ b/Probiotics-airticle.html
@@ -56,7 +56,7 @@
 <!-- breadcrumb -->
 <div class="breadcrumb" aria-label="breadcrumb">
     <ol>
-        <li><a href="index2.0.html">首頁</a></li>
+        <li><a href="index.html">首頁</a></li>
         <li><a href="/blog.html">健康知識</a></li>
         <li aria-current="page">益生菌是什麼？全面解析益生菌功效、怎麼吃與挑選指南</li>
     </ol>
