--- a/about us.html
+++ b/about us.html
@@ -55,7 +55,7 @@
 <!-- breadcrumb -->
 <div class="breadcrumb" aria-label="breadcrumb">
     <ol>
-        <li><a href="index2.0.html">首頁</a></li>
+        <li><a href="index.html">首頁</a></li>
         <li aria-current="page">關於我們</li>
     </ol>
 </div>
