--- a/product-list-all.html
+++ b/product-list-all.html
@@ -54,7 +54,7 @@
 <!-- breadcrumb -->
 <div class="breadcrumb" aria-label="breadcrumb">
     <ol>
-        <li><a href="index2.0.html">首頁</a></li>
+        <li><a href="index.html">首頁</a></li>
         <li aria-current="page">所有商品</li>
     </ol>
 </div>
