--- a/vitaminc-for-kids.html
+++ b/vitaminc-for-kids.html
@@ -55,7 +55,7 @@
 <!-- breadcrumb -->
 <div class="breadcrumb" aria-label="breadcrumb">
     <ol>
-        <li><a href="index2.0.html">首頁</a></li>
+        <li><a href="index.html">首頁</a></li>
         <li><a href="/product-list-all.html">所有商品</a></li>
         <li><a href="/product-list-vitaminc.html">維他命c</a></li>
         <li aria-current="page">vita C 兒童維他命c軟糖 30粒/罐</li>
