--- a/cart-list.html
+++ b/cart-list.html
@@ -5,42 +5,42 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>vitaC 購物車清單</title>
             <meta name="description" content="">
-            <link rel="stylesheet" href="/style.css">
-            <link rel="stylesheet" href="/grid.css">
+            <link rel="stylesheet" href="style.css">
+            <link rel="stylesheet" href="grid.css">
         </head>
         <body>
             <div class="container-large">
                 <header class="main-header">
                     <input type="checkbox" name="" id="menu-switch">
                     <div class="logo">
-                            <a href="index.html"><img src="/picture/logo.png" alt=""></a>
+                            <a href="index.html"><img src="picture/logo.png" alt=""></a>
                     </div>
                     <nav class="main-nav header-right">
                         <ul class="menu">
-                            <li><a href="/about us.html">關於我們</a></li>
+                            <li><a href="about us.html">關於我們</a></li>
                             <li>
-                                <a href="/product-list-all.html">所有商品</a>
+                                <a href="product-list-all.html">所有商品</a>
                                 <input type="checkbox" name="" id="m1">
                                 <label for="m1" class="icon">
                                     <svg id="Layer_1" width="24px" style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                             <polygon class="icon-svg" points="160,115.4 180.7,96 352,256 180.7,416 160,396.7 310.5,256 "/></svg>
                                 </label>
                                     <ul class="submenu">
-                                        <li><a href="/product-list-Probiotics.html">益生菌</a></li>
-                                        <li><a href="/product-list-vitaminb.html">維他命b</a></li>
-                                        <li><a href="/product-list-vitaminc.html">維他命c</a></li>
-                                        <li><a href="/product-list-lutein.html">葉黃素</a></li>
-                                        <li><a href="/product-list-fishoil.html">魚油</a></li>
-                                        <li><a href="/product-list-whey.html">乳清蛋白</a></li>
+                                        <li><a href="product-list-Probiotics.html">益生菌</a></li>
+                                        <li><a href="product-list-vitaminb.html">維他命b</a></li>
+                                        <li><a href="product-list-vitaminc.html">維他命c</a></li>
+                                        <li><a href="product-list-lutein.html">葉黃素</a></li>
+                                        <li><a href="product-list-fishoil.html">魚油</a></li>
+                                        <li><a href="product-list-whey.html">乳清蛋白</a></li>
                                     </ul>
                             </li>
-                            <li><a href="/feedback-list.html">顧客推薦</a></li>
-                            <li><a href="/blog.html">健康知識</a></li>  
+                            <li><a href="feedback-list.html">顧客推薦</a></li>
+                            <li><a href="blog.html">健康知識</a></li>  
                         </ul>
                     </nav>
                     <div class="header-icons nav-right">
                         <div class="navicons">
-                            <a href="/search-page.html"><svg width="25" height="25" viewBox="0 0 30 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <a href="search-page.html"><svg width="25" height="25" viewBox="0 0 30 31" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M24.5 26.75L16.625 18.875C16 19.375 15.2813 19.7708 14.4688 20.0625C13.6563 20.3542 12.7917 20.5 11.875 20.5C9.60417 20.5 7.6825 19.7133 6.11 18.14C4.5375 16.5667 3.75083 14.645 3.75 12.375C3.74917 10.105 4.53583 8.18333 6.11 6.61C7.68417 5.03667 9.60583 4.25 11.875 4.25C14.1442 4.25 16.0663 5.03667 17.6413 6.61C19.2163 8.18333 20.0025 10.105 20 12.375C20 13.2917 19.8542 14.1562 19.5625 14.9688C19.2708 15.7812 18.875 16.5 18.375 17.125L26.25 25L24.5 26.75ZM11.875 18C13.4375 18 14.7658 17.4533 15.86 16.36C16.9542 15.2667 17.5008 13.9383 17.5 12.375C17.4992 10.8117 16.9525 9.48375 15.86 8.39125C14.7675 7.29875 13.4392 6.75167 11.875 6.75C10.3108 6.74833 8.98292 7.29542 7.89125 8.39125C6.79958 9.48708 6.2525 10.815 6.25 12.375C6.2475 13.935 6.79458 15.2633 7.89125 16.36C8.98792 17.4567 10.3158 18.0033 11.875 18Z" fill="currentcolor"/>
                                 </svg></a>
                                 <a href="#"><svg width="25" height="25" viewBox="0 0 26 25" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -63,7 +63,7 @@
     </div>
     <div class="order-row">
         <div class="order-img">
-            <img src="/picture/ fishoilproduct.jpg" alt="魚油膠囊">
+            <img src="picture/ fishoilproduct.jpg" alt="魚油膠囊">
         </div>
         <p class="order-name">vitaC 頂級魚油膠囊 30粒/罐</p>
         <p class="order-price">NT$ 1700</p>
@@ -76,7 +76,7 @@
         <button class="cancel-btn">X</button>
     </div>
     <div class="check">
-    <button class="check-btn" onclick="location.href='/check-membership-page.html'">訂單確認</button>
+    <button class="check-btn" onclick="location.href='check-membership-page.html'">訂單確認</button>
     </div>
     </div>
 </section>
