--- a/product-list-vitaminb.html
+++ b/product-list-vitaminb.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/grid.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="grid.css">
     <title>vita C 綜合維他命b</title>
 </head>
 <body>
@@ -12,37 +12,37 @@
         <header class="main-header">
             <input type="checkbox" name="" id="menu-switch">
             <div class="logo">
-            <a href="index.html"><img src="/picture/logo.png" alt=""></a>
+            <a href="index.html"><img src="picture/logo.png" alt=""></a>
             </div>
             <nav class="main-nav header-right">
                 <ul class="menu">
-                    <li><a href="/about us.html">關於我們</a></li>
+                    <li><a href="about us.html">關於我們</a></li>
                     <li>
-                        <a href="/product-list-all.html">所有商品</a>
+                        <a href="product-list-all.html">所有商品</a>
                         <input type="checkbox" name="" id="m1">
                         <label for="m1" class="icon">
                             <svg id="Layer_1" width="24px" style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                 <polygon class="icon-svg" points="160,115.4 180.7,96 352,256 180.7,416 160,396.7 310.5,256 "/></svg>
                         </label>
                         <ul class="submenu">
-                            <li><a href="/product-list-Probiotics.html">益生菌</a></li>
+                            <li><a href="product-list-Probiotics.html">益生菌</a></li>
                             <li><a href="#">維他命b</a></li>
-                            <li><a href="/product-list-vitaminc.html">維他命c</a></li>
-                            <li><a href="/product-list-lutein.html">葉黃素</a></li>
-                            <li><a href="/product-list-fishoil.html">魚油</a></li>
-                            <li><a href="/product-list-whey.html">乳清蛋白</a></li>
+                            <li><a href="product-list-vitaminc.html">維他命c</a></li>
+                            <li><a href="product-list-lutein.html">葉黃素</a></li>
+                            <li><a href="product-list-fishoil.html">魚油</a></li>
+                            <li><a href="product-list-whey.html">乳清蛋白</a></li>
                         </ul>
                     </li>
-                    <li><a href="/feedback-list.html">顧客推薦</a></li>
-                    <li><a href="/blog.html">健康知識</a></li>
+                    <li><a href="feedback-list.html">顧客推薦</a></li>
+                    <li><a href="blog.html">健康知識</a></li>
                 </ul>
             </nav>
             <div class="header-icons nav-right">
                 <div class="navicons">
-                <a href="/search-page.html"><svg width="25" height="25" viewBox="0 0 30 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <a href="search-page.html"><svg width="25" height="25" viewBox="0 0 30 31" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M24.5 26.75L16.625 18.875C16 19.375 15.2813 19.7708 14.4688 20.0625C13.6563 20.3542 12.7917 20.5 11.875 20.5C9.60417 20.5 7.6825 19.7133 6.11 18.14C4.5375 16.5667 3.75083 14.645 3.75 12.375C3.74917 10.105 4.53583 8.18333 6.11 6.61C7.68417 5.03667 9.60583 4.25 11.875 4.25C14.1442 4.25 16.0663 5.03667 17.6413 6.61C19.2163 8.18333 20.0025 10.105 20 12.375C20 13.2917 19.8542 14.1562 19.5625 14.9688C19.2708 15.7812 18.875 16.5 18.375 17.125L26.25 25L24.5 26.75ZM11.875 18C13.4375 18 14.7658 17.4533 15.86 16.36C16.9542 15.2667 17.5008 13.9383 17.5 12.375C17.4992 10.8117 16.9525 9.48375 15.86 8.39125C14.7675 7.29875 13.4392 6.75167 11.875 6.75C10.3108 6.74833 8.98292 7.29542 7.89125 8.39125C6.79958 9.48708 6.2525 10.815 6.25 12.375C6.2475 13.935 6.79458 15.2633 7.89125 16.36C8.98792 17.4567 10.3158 18.0033 11.875 18Z" fill="currentcolor"/>
                     </svg></a>
-                    <a href="/cart-list.html"><svg width="25" height="25" viewBox="0 0 26 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <a href="cart-list.html"><svg width="25" height="25" viewBox="0 0 26 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M1.4837 0.349988C1.60189 0.315092 1.7258 0.303839 1.84834 0.316874C1.97088 0.329909 2.08965 0.366975 2.19785 0.425953C2.30605 0.484931 2.40157 0.564663 2.47893 0.660587C2.55629 0.756512 2.61398 0.866748 2.6487 0.984989L3.3362 3.31249H21.6549C23.9549 3.31249 25.7112 5.45874 25.0487 7.69999L22.9799 14.7C22.5399 16.1925 21.1412 17.1875 19.5862 17.1875H8.1412C6.5862 17.1875 5.1887 16.1925 4.74745 14.7L0.851198 1.51624C0.780623 1.27788 0.807609 1.02124 0.92622 0.802772C1.04483 0.584302 1.24536 0.420635 1.4837 0.349988ZM5.81245 21.875C5.81245 21.1291 6.10876 20.4137 6.63621 19.8863C7.16366 19.3588 7.87903 19.0625 8.62495 19.0625C9.37087 19.0625 10.0862 19.3588 10.6137 19.8863C11.1411 20.4137 11.4374 21.1291 11.4374 21.875C11.4374 22.6209 11.1411 23.3363 10.6137 23.8637C10.0862 24.3912 9.37087 24.6875 8.62495 24.6875C7.87903 24.6875 7.16366 24.3912 6.63621 23.8637C6.10876 23.3363 5.81245 22.6209 5.81245 21.875ZM15.8124 21.875C15.8124 21.5056 15.8852 21.1399 16.0265 20.7987C16.1679 20.4575 16.375 20.1474 16.6362 19.8863C16.8974 19.6251 17.2074 19.4179 17.5487 19.2766C17.8899 19.1352 18.2556 19.0625 18.6249 19.0625C18.9943 19.0625 19.36 19.1352 19.7012 19.2766C20.0425 19.4179 20.3525 19.6251 20.6137 19.8863C20.8749 20.1474 21.082 20.4575 21.2234 20.7987C21.3647 21.1399 21.4374 21.5056 21.4374 21.875C21.4374 22.6209 21.1411 23.3363 20.6137 23.8637C20.0862 24.3912 19.3709 24.6875 18.6249 24.6875C17.879 24.6875 17.1637 24.3912 16.6362 23.8637C16.1088 23.3363 15.8124 22.6209 15.8124 21.875Z" fill="currentcolor"/>
                     </svg>
                     </a>
@@ -55,7 +55,7 @@
 <div class="breadcrumb" aria-label="breadcrumb">
     <ol>
         <li><a href="index.html">首頁</a></li>
-        <li><a href="/product-list-all.html">所有商品</a></li>
+        <li><a href="product-list-all.html">所有商品</a></li>
         <li aria-current="page">vita C 綜合維他命b群推薦</li>
     </ol>
 </div>
@@ -65,42 +65,42 @@
                 <div class="col col-3">
                     <div class="card product-list-card">
                         <div class="pic">
-                            <a href="/vitaminbproduct.html"><img src="/picture/vitaminbproduct.jpg" alt="綜合維他命b群30粒/罐"></a>
+                            <a href="vitaminbproduct.html"><img src="picture/vitaminbproduct.jpg" alt="綜合維他命b群30粒/罐"></a>
                         </div>
                         <div class="txt">
-                            <h3><a href="/vitaminbproduct.html">vitaC 綜合維他命b(30粒)</a></h3>
+                            <h3><a href="vitaminbproduct.html">vitaC 綜合維他命b(30粒)</a></h3>
                             <p>$ 900</p>
                         </div>
                         <div class="addtocarticon">
-                            <a href="#"><img src="/picture/carticon.svg" alt="熱門商品加入購物車"></a>
+                            <a href="#"><img src="picture/carticon.svg" alt="熱門商品加入購物車"></a>
                         </div>
                     </div>
                 </div>
                 <div class="col col-3">
                     <div class="card product-list-card">
                         <div class="pic">
-                            <a href="/vitaminbproduct.html"><img src="/picture/vitaminbproduct.jpg" alt="綜合維他命b群50粒/罐"></a>
+                            <a href="vitaminbproduct.html"><img src="picture/vitaminbproduct.jpg" alt="綜合維他命b群50粒/罐"></a>
                         </div>
                         <div class="txt">
-                            <h3><a href="/vitaminbproduct.html">vitaC 綜合維他命b(50粒)</a></h3>
+                            <h3><a href="vitaminbproduct.html">vitaC 綜合維他命b(50粒)</a></h3>
                             <p>$ 1200</p>
                         </div>
                         <div class="addtocarticon">
-                            <a href="#"><img src="/picture/carticon.svg" alt="熱門商品加入購物車"></a>
+                            <a href="#"><img src="picture/carticon.svg" alt="熱門商品加入購物車"></a>
                         </div>
                     </div>
                 </div>
                 <div class="col col-3">
                     <div class="card product-list-card">
                         <div class="pic">
-                            <a href="/vitaminbproduct.html"><img src="/picture/vitaminbproduct.jpg" alt="綜合維他命b群30粒/罐"></a>
+                            <a href="vitaminbproduct.html"><img src="picture/vitaminbproduct.jpg" alt="綜合維他命b群30粒/罐"></a>
                         </div>
                         <div class="txt">
                             <h3>vitaC 綜合維他命b(100粒)</h3>
                             <p>$ 1700</p>
                         </div>
                         <div class="addtocarticon">
-                            <a href="#"><img src="/picture/carticon.svg" alt="熱門商品加入購物車"></a>
+                            <a href="#"><img src="picture/carticon.svg" alt="熱門商品加入購物車"></a>
                         </div>
                     </div>
                 </div>
@@ -138,9 +138,9 @@
                     <div class="follow-us">
                         <p>追蹤我們</p>
                         <ul>
-                            <a href="#"><li><img src="/picture/facebookicon.png" alt=""></li></a>
-                            <a href="#"><li><img src="/picture/instaicon.png" alt=""></li></a>
-                            <a href="#"><li><img src="/picture/lineicon.png" alt=""></li></a>
+                            <a href="#"><li><img src="picture/facebookicon.png" alt=""></li></a>
+                            <a href="#"><li><img src="picture/instaicon.png" alt=""></li></a>
+                            <a href="#"><li><img src="picture/lineicon.png" alt=""></li></a>
                         </ul>
                     </div>
                 </div>
