--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <section class="banner-section">
                         <div class="banner">
                             <div class="bannerimg">
-                                <img src="/picture/banner.jpg">
+                                <img src="picture/banner.jpg">
                             </div>
                             <div class="bannertxt">
                                 <h1 id="banner-h1">vita C <br> 純粹成就你的健康美學 </h1>
