--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
                 <div class="container">
                     <section class="sale-section">
                         <div class="birthday-sale">
-                            <a href="#"><img src="picture/vitacbirthdaysale.jpg" alt="vitac生日優惠"></a>
+                            <a href="product-list-all.html"><img src="picture/vitacbirthdaysale.jpg" alt="vitac生日優惠"></a>
                         </div>
                         <div class="salepic-right">
                         <div class="summer-sale">
-                            <a href="#"><img src="picture/summersale.jpg" alt="vitac夏日優惠"></a>
+                            <a href="product-list-vitaminc.html"><img src="picture/summersale.jpg" alt="vitac夏日優惠"></a>
                         </div>
                         <div class="festival-sale">
-                            <a href="#"><img src="picture/festivalbanner.jpg" alt="vitac端午優惠"></a>
+                            <a href="product-list-all.html"><img src="picture/festivalbanner.jpg" alt="vitac端午優惠"></a>
                         </div>
                     </div>
                     </section>
