--- a/lutienarticle.html
+++ b/lutienarticle.html
@@ -107,7 +107,7 @@
             <h3>只要吃葉黃素就不用注意用眼習慣？</h3>
             <p>葉黃素是保護眼睛的營養素，但良好的用眼習慣仍然非常重要。避免長時間近距離用眼、適時讓眼睛休息、保持充足睡眠等，都是維護視力健康的關鍵。</p>
                 
-            <h2>vitaC r金盞花葉黃素：為您的晶亮注入純粹活力！</h2>
+            <h2>vitaC 金盞花葉黃素：為您的晶亮注入純粹活力！</h2>
             <p>
                 「「葉黃素怎麼吃？」掌握正確的食用時間、劑量和搭配，才能讓這項天然的護眼成分發揮最大的效益。「葉黃素是什麼？」它是來自大自然的珍貴禮物，能幫助我們過濾藍光、抵抗氧化，維持清晰的視力。為了您的晶亮雙眼，從今天起，就開始聰明補充葉黃素，並養成良好的用眼習慣，讓您的視界更加清晰明亮！
             </p>
