--- a/wheyproduct.html
+++ b/wheyproduct.html
@@ -57,6 +57,7 @@
     <ol>
         <li><a href="index.html">首頁</a></li>
         <li><a href="product-list-all.html">所有商品</a></li>
+        <li><a href="product-list-whey.html">乳清蛋白</a></li>
         <li aria-current="page">vita C 乳清蛋白(2.2kg)</li>
     </ol>
 </div>
