商品頁麵包屑/立即購買連結增加

--- a/probioticsproduct.html
+++ b/probioticsproduct.html
@@ -57,6 +57,7 @@
     <ol>
         <li><a href="index.html">首頁</a></li>
         <li><a href="product-list-all.html">所有商品</a></li>
+        <li><a href="product-list-Probiotics.html">益生菌</a></li>
         <li aria-current="page">vita C 綜合益生菌 30包/盒</li>
     </ol>
 </div>
@@ -93,7 +94,7 @@
                 <button class="plusbtn">+</button>
             </div>
             <div class="btns">
-                <button class="buybtn">立即購買</button>
+                <a href="cart-list.html"><button class="buybtn">立即購買</button></a>
                 <button class="addtocartbtn">加入購物車</button>
             </div>
         </div>
