--- a/vitaminc-for-kids.html
+++ b/vitaminc-for-kids.html
@@ -94,7 +94,7 @@
                 <button class="plusbtn">+</button>
             </div>
             <div class="btns">
-                <button class="buybtn">立即購買</button>
+                <a href="cart-list.html"><button class="buybtn">立即購買</button></a>
                 <button class="addtocartbtn">加入購物車</button>
             </div>
         </div>
