--- a/fishoilproduct.html
+++ b/fishoilproduct.html
@@ -57,6 +57,7 @@
     <ol>
         <li><a href="index.html">首頁</a></li>
         <li><a href="product-list-all.html">所有商品</a></li>
+        <li><a href="product-list-fishoil.html">魚油</a></li>
         <li aria-current="page">vita C 頂級魚油膠囊 30粒/罐</li>
     </ol>
 </div>
@@ -93,7 +94,7 @@
                 <button class="plusbtn">+</button>
             </div>
             <div class="btns">
-                <button class="buybtn">立即購買</button>
+                <a href="cart-list.html"><button class="buybtn">立即購買</button></a>
                 <button class="addtocartbtn">加入購物車</button>
             </div>
         </div>
