--- a/vitamincproduct.html
+++ b/vitamincproduct.html
@@ -57,7 +57,7 @@
     <ol>
         <li><a href="index.html">首頁</a></li>
         <li><a href="product-list-all.html">所有商品</a></li>
-        <li><a href="product-list-vitaminc.html">所有商品</a></li>
+        <li><a href="product-list-vitaminc.html">維他命c</a></li>
         <li aria-current="page">vita C 綜合維他命c 30粒/罐</li>
     </ol>
 </div>
@@ -94,7 +94,7 @@
                 <button class="plusbtn">+</button>
             </div>
             <div class="btns">
-                <button class="buybtn">立即購買</button>
+                <a href="cart-list.html"><button class="buybtn">立即購買</button></a>
                 <button class="addtocartbtn">加入購物車</button>
             </div>
         </div>
