--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                         <p>$ 1300</p>
                                     </div>
                                     <div class="addtocarticon">
-                                        <a href="cart-list.html"><img src="picture/carticon.svg" alt="熱門商品加入購物車"></a>
+                                        <a href="#"><img src="picture/carticon.svg" alt="熱門商品加入購物車"></a>
                                     </div>
                                 </div>
                             </div>
@@ -117,7 +117,7 @@
                                         <p>$ 900</p>
                                     </div>
                                     <div class="addtocarticon">
-                                        <a href="cart-list.html"><img src="picture/carticon.svg" alt="熱門商品加入購物車"></a>
+                                        <a href="#"><img src="picture/carticon.svg" alt="熱門商品加入購物車"></a>
                                     </div>
                                 </div>
                             </div>
@@ -131,7 +131,7 @@
                                         <p>$ 1700</p>
                                     </div>
                                     <div class="addtocarticon">
-                                        <a href="cart-list.html"><img src="picture/carticon.svg" alt="熱門商品加入購物車"></a>
+                                        <a href="#"><img src="picture/carticon.svg" alt="熱門商品加入購物車"></a>
                                     </div>
                                 </div>
                             </div>
@@ -145,7 +145,7 @@
                                         <p>$ 1500</p>
                                     </div>
                                     <div class="addtocarticon">
-                                        <a href="cart-list.html"><img src="picture/carticon.svg" alt="熱門商品加入購物車"></a>
+                                        <a href="#"><img src="picture/carticon.svg" alt="熱門商品加入購物車"></a>
                                     </div>
                                 </div>
                             </div>
