product-pic-change

--- a/fishoilproduct.html
+++ b/fishoilproduct.html
@@ -57,7 +57,7 @@
     <ol>
         <li><a href="index.html">首頁</a></li>
         <li><a href="product-list-all.html">所有商品</a></li>
-        <li><a href="product-list-fishoil.html">魚油</a></li>
+        <li><a href="product-list-fishoil.html">vita C 頂級魚油膠囊推薦</a></li>
         <li aria-current="page">vita C 頂級魚油膠囊 30粒/罐</li>
     </ol>
 </div>
@@ -66,12 +66,12 @@
     <div class="productpage-first-section">
         <div class="productimg">
             <div class="large-img">
-                <img src="picture/fishoilproduct.jpg" alt="頂級魚油膠囊">
+                <img src="picture/product-pic/fishoilproduct-1.jpg" alt="頂級魚油膠囊">
             </div>
             <div class="small-img">
-                <img src="picture/probioticsproduct.jpg" alt="頂級魚油膠囊各組合">
-                <img src="picture/probioticsorange.jpg" alt="頂級魚油膠囊">
-                <img src="picture/probioticsgreen.jpg" alt="頂級魚油膠囊">
+                <img src="picture/product-pic/fishoilproduct-3.jpg" alt="頂級魚油膠囊各組合">
+                <img src="picture/product-pic/fishoilproduct-4.jpg" alt="頂級魚油膠囊">
+                <img src="picture/product-pic/fishoilproduct-5.jpg" alt="頂級魚油膠囊">
             </div>
         </div>
         <div class="productpage-first-section-right">
