--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <section class="container">
                         <div class="row row-cols-1 row-cols-md-4">
                             <div class="col col-4">
-                                <div class="card">
+                                <a href="probioticsproduct.html"><div class="card">
                                     <div class="pic">
                                         <img src="picture/probioticsproduct.jpg" alt="綜合益生菌30包/盒">
                                     </div>
@@ -106,9 +106,10 @@
                                         <a href="#"><img src="picture/carticon.svg" alt="熱門商品加入購物車"></a>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col col-4">
-                                <div class="card">
+                                <a href="vitaminbproduct.html"><div class="card">
                                     <div class="pic">
                                         <img src="picture/vitaminbproduct.jpg" alt="綜合維他命b 30粒/罐">
                                     </div>
@@ -120,9 +121,10 @@
                                         <a href="#"><img src="picture/carticon.svg" alt="熱門商品加入購物車"></a>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col col-4">
-                                <div class="card">
+                                <a href="fishoilproduct.html"><div class="card">
                                     <div class="pic">
                                         <img src="picture/fishoilproduct.jpg" alt="頂級魚油30粒/罐">
                                     </div>
@@ -134,9 +136,10 @@
                                         <a href="#"><img src="picture/carticon.svg" alt="熱門商品加入購物車"></a>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                             <div class="col col-4">
-                                <div class="card">
+                                <a href="lutienproduct.html"><div class="card">
                                     <div class="pic">
                                         <img src="picture/luteinproduct.jpg" alt="金盞花葉黃素30粒/罐">
                                     </div>
@@ -148,6 +151,7 @@
                                         <a href="#"><img src="picture/carticon.svg" alt="熱門商品加入購物車"></a>
                                     </div>
                                 </div>
+                            </a>
                             </div>
                         </div>
                     </section>
@@ -209,32 +213,29 @@
                         <div class="card-list">
                                 <div class="knowledge-card">
                                     <div class="pic">
-                                        <img src="picture/articleimg/vitaminbarticle.jpg" alt="吃b群有效嗎">
+                                        <a href="/vitaminbarticle.html"><img src="picture/articleimg/vitaminbarticle.jpg" alt="吃b群有效嗎"></a>
                                     </div>
                                     <div class="txt">
                                         <h3>吃b群有效嗎</h3>
                                         <p>精神不濟、容易疲勞？B 群真的有效嗎？ 深入解析 B 群的功效、種類與正確補充方式...</p>
-                                        <a href="vitaminbarticle.html">Read More</a>
                                     </div>
                                 </div>
                                 <div class="knowledge-card">
                                     <div class="pic">
-                                        <img src="picture/articleimg/luteinarticle.jpg" alt="葉黃素怎麼吃">
+                                        <a href="/lutienarticle.html"><img src="picture/articleimg/luteinarticle.jpg" alt="葉黃素怎麼吃"></a>
                                     </div>
                                     <div class="txt">
                                         <h3>葉黃素怎麼吃</h3>
                                         <p>守護晶亮，葉黃素怎麼吃才有效？ 了解葉黃素的正確攝取時間、劑量與搭配...</p>
-                                        <a href="lutienarticle.html">Read More</a>
                                     </div>
                                 </div>
                                 <div class="knowledge-card">
                                     <div class="pic">
-                                        <img src="picture/articleimg/probioticsarticle.jpg" alt="益生菌功效是什麼">
+                                        <a href="/Probiotics-airticle.html"><img src="picture/articleimg/probioticsarticle.jpg" alt="益生菌功效是什麼"></a>
                                     </div>
                                     <div class="txt">
                                         <h3>益生菌功效是什麼</h3>
-                                        <p>探索益生菌的強大功效！ 您是否知道，腸道健康是維持全身機能的關...</p>
-                                        <a href="Probiotics-airticle.html">Read More</a>
+                                        <p>探索益生菌的強大功效！ 您是否知道，腸道健康是維持全身機能的關...</p> 
                                     </div>
                                 </div>
                         </div>
