--- a/probioticsproduct.html
+++ b/probioticsproduct.html
@@ -57,7 +57,7 @@
     <ol>
         <li><a href="index.html">首頁</a></li>
         <li><a href="product-list-all.html">所有商品</a></li>
-        <li><a href="product-list-Probiotics.html">益生菌</a></li>
+        <li><a href="product-list-Probiotics.html">vita C 綜合益生菌推薦</a></li>
         <li aria-current="page">vita C 綜合益生菌 30包/盒</li>
     </ol>
 </div>
