--- a/vitaminbproduct.html
+++ b/vitaminbproduct.html
@@ -57,7 +57,7 @@
     <ol>
         <li><a href="index.html">首頁</a></li>
         <li><a href="product-list-all.html">所有商品</a></li>
-        <li><a href="product-list-vitaminb.html">維他命b</a></li>
+        <li><a href="product-list-vitaminb.html">vita C 綜合維他命b推薦</a></li>
         <li aria-current="page">vita C 綜合維他命b 30粒/罐</li>
     </ol>
 </div>
@@ -69,9 +69,9 @@
                 <img src="picture/vitaminbproduct.jpg" alt="綜合維他命b">
             </div>
             <div class="small-img">
-                <img src="picture/probioticsproduct.jpg" alt="綜合維他命b各組合">
-                <img src="picture/probioticsorange.jpg" alt="綜合維他命b">
-                <img src="picture/probioticsgreen.jpg" alt="綜合維他命b">
+                <img src="picture/product-pic/vitaminbproduct-2.jpg" alt="綜合維他命b各組合">
+                <img src="picture/product-pic/vitaminbproduct-3.jpg" alt="綜合維他命b">
+                <img src="picture/product-pic/vitaminbproduct-4.jpg" alt="綜合維他命b">
             </div>
         </div>
         <div class="productpage-first-section-right">
