--- a/vitamincproduct.html
+++ b/vitamincproduct.html
@@ -57,7 +57,7 @@
     <ol>
         <li><a href="index.html">首頁</a></li>
         <li><a href="product-list-all.html">所有商品</a></li>
-        <li><a href="product-list-vitaminc.html">維他命c</a></li>
+        <li><a href="product-list-vitaminc.html">vita C 綜合維他命c推薦</a></li>
         <li aria-current="page">vita C 綜合維他命c 30粒/罐</li>
     </ol>
 </div>
@@ -69,9 +69,9 @@
                 <img src="picture/vitminc.jpg" alt="葉黃素錠">
             </div>
             <div class="small-img">
-                <img src="picture/probioticsproduct.jpg" alt="葉黃素錠各組合">
-                <img src="picture/probioticsorange.jpg" alt="葉黃素錠">
-                <img src="picture/probioticsgreen.jpg" alt="葉黃素錠">
+                <img src="picture/product-pic/vitamincproduct-2.jpg" alt="葉黃素錠各組合">
+                <img src="picture/product-pic/vitamincproduct-3.jpg" alt="葉黃素錠">
+                <img src="picture/product-pic/vitamincproduct-4.jpg" alt="葉黃素錠">
             </div>
         </div>
         <div class="productpage-first-section-right">
