--- a/wheyproduct.html
+++ b/wheyproduct.html
@@ -57,7 +57,7 @@
     <ol>
         <li><a href="index.html">首頁</a></li>
         <li><a href="product-list-all.html">所有商品</a></li>
-        <li><a href="product-list-whey.html">乳清蛋白</a></li>
+        <li><a href="product-list-whey.html">vita C 乳清蛋白推薦</a></li>
         <li aria-current="page">vita C 乳清蛋白(2.2kg)</li>
     </ol>
 </div>
@@ -69,9 +69,9 @@
                 <img src="picture/Whey protein.jpg" alt="葉黃素錠">
             </div>
             <div class="small-img">
-                <img src="picture/probioticsproduct.jpg" alt="葉黃素錠各組合">
-                <img src="picture/probioticsorange.jpg" alt="葉黃素錠">
-                <img src="picture/probioticsgreen.jpg" alt="葉黃素錠">
+                <img src="picture/product-pic/whey-18kg.jpg" alt="葉黃素錠各組合">
+                <img src="picture/product-pic/whey-sm-cl.jpg" alt="葉黃素錠">
+                <img src="picture/product-pic/whey-sm.jpg" alt="葉黃素錠">
             </div>
         </div>
         <div class="productpage-first-section-right">
