--- a/vitaminc-for-kids.html
+++ b/vitaminc-for-kids.html
@@ -57,7 +57,7 @@
     <ol>
         <li><a href="index.html">首頁</a></li>
         <li><a href="product-list-all.html">所有商品</a></li>
-        <li><a href="product-list-vitaminc.html">維他命c</a></li>
+        <li><a href="product-list-vitaminc.html">vita C 綜合維他命c推薦</a></li>
         <li aria-current="page">vita C 兒童維他命c軟糖 30粒/罐</li>
     </ol>
 </div>
@@ -69,9 +69,9 @@
                 <img src="picture/vitamincforkids.jpg" alt="兒童維他命c軟糖">
             </div>
             <div class="small-img">
-                <img src="picture/probioticsproduct.jpg" alt="兒童維他命c軟糖各組合">
-                <img src="picture/probioticsorange.jpg" alt="兒童維他命c軟糖">
-                <img src="picture/probioticsgreen.jpg" alt="兒童維他命c軟糖">
+                <img src="picture/product-pic/vitamincforkids-2.jpg" alt="兒童維他命c軟糖各組合">
+                <img src="picture/product-pic/vitamincforkids-3.jpg" alt="兒童維他命c軟糖">
+                <img src="picture/product-pic/vitaminc-for-kids-4.jpg" alt="兒童維他命c軟糖">
             </div>
         </div>
         <div class="productpage-first-section-right">
