index-articel-link-change

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                         <div class="card-list">
                                 <div class="knowledge-card">
                                     <div class="pic">
-                                        <a href="/vitaminbarticle.html"><img src="picture/articleimg/vitaminbarticle.jpg" alt="吃b群有效嗎"></a>
+                                        <a href="vitaminbarticle.html"><img src="picture/articleimg/vitaminbarticle.jpg" alt="吃b群有效嗎"></a>
                                     </div>
                                     <div class="txt">
                                         <h3>吃b群有效嗎</h3>
@@ -222,7 +222,7 @@
                                 </div>
                                 <div class="knowledge-card">
                                     <div class="pic">
-                                        <a href="/lutienarticle.html"><img src="picture/articleimg/luteinarticle.jpg" alt="葉黃素怎麼吃"></a>
+                                        <a href="lutienarticle.html"><img src="picture/articleimg/luteinarticle.jpg" alt="葉黃素怎麼吃"></a>
                                     </div>
                                     <div class="txt">
                                         <h3>葉黃素怎麼吃</h3>
@@ -231,7 +231,7 @@
                                 </div>
                                 <div class="knowledge-card">
                                     <div class="pic">
-                                        <a href="/Probiotics-airticle.html"><img src="picture/articleimg/probioticsarticle.jpg" alt="益生菌功效是什麼"></a>
+                                        <a href="Probiotics-airticle.html"><img src="picture/articleimg/probioticsarticle.jpg" alt="益生菌功效是什麼"></a>
                                     </div>
                                     <div class="txt">
                                         <h3>益生菌功效是什麼</h3>
