--- a/customer-feedback-fisholi.html
+++ b/customer-feedback-fisholi.html
@@ -3,8 +3,8 @@
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>vitaC 頂級魚油膠囊推薦</title>
-            <meta name="description" content="">
+            <title>vitaC 頂級魚油膠囊顧客推薦</title>
+            <meta name="description" content="今年剛滿 58 歲，身體狀況跟年輕時比起來多少有些變化，特別是早上起床時，有時會覺得身體比較緊繃，精神也比較容易疲累。家人建議我可以補充魚油試試，我就選用了 vitaC 這款魚油。 我大約從三個月前開始每天飯後固定吃兩顆。剛開始沒有抱太多期待，但吃了一段時間後，慢慢覺得日常的一些小不適變少了">
             <link rel="stylesheet" href="style.css">
             <link rel="stylesheet" href="grid.css">
         </head>
