--- a/customer-feedback-lutein.html
+++ b/customer-feedback-lutein.html
@@ -3,8 +3,8 @@
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>vitaC 金盞花葉黃素推薦</title>
-            <meta name="description" content="">
+            <title>vitaC 金盞花葉黃素顧客推薦</title>
+            <meta name="description" content="我今年32歲，在科技業當工程師，身邊也有不少同事會補充葉黃素，我自己算是蠻在意成分跟使用體驗的人，所以試過幾個牌子之後，最後選擇了 vitaC的葉黃素。它的膠囊比我之前吃過的其他品牌小一點，吞起來比較沒有負擔">
             <link rel="stylesheet" href="style.css">
             <link rel="stylesheet" href="grid.css">
         </head>
