--- a/customer-feedback-probiotics.html
+++ b/customer-feedback-probiotics.html
@@ -3,8 +3,8 @@
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>vitaC 綜合益生菌推薦</title>
-            <meta name="description" content="">
+            <title>vitaC 綜合益生菌顧客推薦</title>
+            <meta name="description" content="我今年27歲，平常給人的感覺是比較健康陽光型的女生，肌膚偏古銅色，喜歡戶外活動，也有固定運動的習慣。不過外表看起來健康歸健康，生活習慣其實有點失衡，最大的問題就是長期外食。 試了vitaC 這款益生菌快一個月，我發現自己早上起床後的感受比較舒服一點">
             <link rel="stylesheet" href="style.css">
             <link rel="stylesheet" href="grid.css">
         </head>
