--- a/customer-feedback-vitaminc.html
+++ b/customer-feedback-vitaminc.html
@@ -3,8 +3,8 @@
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>vitaC 綜合維他命c推薦</title>
-            <meta name="description" content="">
+            <title>vitaC 綜合維他命c顧客推薦</title>
+            <meta name="description" content="我今年33歲，是個很喜歡咖啡與閱讀的上班族。平常的生活節奏蠻忙碌，近期發現氣色變得比較黯淡，我試了 vitaC 的維他命C後，不會那麼容易感到倦怠，專注力也比較能維持。">
             <link rel="stylesheet" href="style.css">
             <link rel="stylesheet" href="grid.css">
         </head>
