--- a/customer-feedback-whey.html
+++ b/customer-feedback-whey.html
@@ -3,8 +3,8 @@
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>vitaC 乳清蛋白推薦</title>
-            <meta name="description" content="">
+            <title>vitaC 乳清蛋白顧客推薦</title>
+            <meta name="description" content="我平常有在健身，大概每週重訓4次，飲食也會稍微注意蛋白質的攝取。以前都是靠雞胸肉或豆腐補充，但有時工作忙起來真的不太好準備。後來開始喝乳清蛋白，是同事推薦我試試 vitaC 的，說口味不錯、溶解快。 我先試了巧克力口味，第一次喝就蠻驚訝的，不會有以前喝過那種粉感重或甜膩的問題。">
             <link rel="stylesheet" href="style.css">
             <link rel="stylesheet" href="grid.css">
         </head>
