--- a/customer-feedback-vitaminb.html
+++ b/customer-feedback-vitaminb.html
@@ -3,8 +3,8 @@
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>vitaC 綜合維他命b群推薦</title>
-            <meta name="description" content="">
+            <title>vitaC 綜合維他命b群顧客推薦</title>
+            <meta name="description" content="我今年29歲，最近工作節奏非常緊湊，覺得整個人像快沒電，開始補充vitaC的 B 群，覺得幫助蠻大，氣色看起來比之前好，不再像之前一臉沒睡飽。">
             <link rel="stylesheet" href="style.css">
             <link rel="stylesheet" href="grid.css">
         </head>
