關於我們描述增加

--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>vitaC的營養師團隊們</title>
-            <meta name="description" content="">
+            <meta name="description" content="在追求健康與美麗的道路上，vitaC 深信「簡約之道，Less is More」的真諦。如同我們精心挑選的每一項成分，我們的專業營養師團隊亦秉持著純粹、專業的精神，以簡潔明瞭的知識，引導你走向由內而外的健康美學。">
             <link rel="stylesheet" href="style.css">
             <link rel="stylesheet" href="grid.css">
         </head>
