選單列加購物車連結及商品頁按鈕調整

--- a/cart-list.html
+++ b/cart-list.html
@@ -12,10 +12,10 @@
     <body>
         <header class="main-header container-large">
             <div class="logo">
-                <a href="index.html"><img src="/picture/logo.png" alt=""></a>
+                <a href="index.html"><img src="picture/logo.png" alt=""></a>
             </div>
             <ul class="menu open hidden" id="mobileMenu">
-                <li><a href="about us.html">關於我們</a></li>
+                <li><a href="aboutus.html">關於我們</a></li>
                 <li>
                     <a href="product-list-all.html">所有商品</a>
                     <input type="checkbox" name="" id="m1">
@@ -174,9 +174,9 @@
                     <div class="follow-us">
                         <p>追蹤我們</p>
                         <ul>
-                            <a href="#"><li><img src="/picture/facebookicon.svg" alt=""></li></a>
-                            <a href="#"><li><img src="/picture/instaicon.svg" alt=""></li></a>
-                            <a href="#"><li><img src="/picture/lineicon.svg" alt=""></li></a>
+                           <li><a href="#"><img src="picture/facebookicon.svg" alt="追蹤我們facebook"></a></li>
+                            <li><a href="#"><img src="picture/instaicon.svg" alt="追蹤我們instagram"></a></li>
+                            <li><a href="#"><img src="picture/lineicon.svg" alt="加入line好友"></a></li>
                         </ul>
                     </div>
                 </div>
